--- a/DoodleAnims/DoodleAnims/DoodleAnims.csproj
+++ b/DoodleAnims/DoodleAnims/DoodleAnims.csproj
@@ -56,6 +56,13 @@
     <Compile Include="BoolDialog.Designer.cs">
       <DependentUpon>BoolDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Lib\Anim\Skeleton.cs" />
+    <Compile Include="Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings.Designer.cs">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\DoubleBufferedPanel.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -87,6 +94,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Settings.resx">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
