--- a/DoodleAnims/DoodleAnims/app.config
+++ b/DoodleAnims/DoodleAnims/app.config
@@ -10,6 +10,27 @@
             <setting name="ShowTree" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="OrginColor" serializeAs="String">
+                <value>Lime</value>
+            </setting>
+            <setting name="EndPointColor" serializeAs="String">
+                <value>Red</value>
+            </setting>
+            <setting name="OrginMarkerSize" serializeAs="String">
+                <value>4</value>
+            </setting>
+            <setting name="EndPointMarkerSize" serializeAs="String">
+                <value>8</value>
+            </setting>
+            <setting name="OrginMarkerType" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="EndPointMarkerType" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="BackgroundColor" serializeAs="String">
+                <value>White</value>
+            </setting>
         </DoodleAnims.Properties.Settings>
     </userSettings>
 </configuration>
