--- a/DoodleAnims/DoodleAnims/DoodleAnims.csproj
+++ b/DoodleAnims/DoodleAnims/DoodleAnims.csproj
@@ -20,7 +20,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>doc.xml</DocumentationFile>
@@ -53,12 +53,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Trinangle.cs" />
+    <Compile Include="Utils\RoundedRectangle.cs" />
+    <Compile Include="Utils\AnimController.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="BinaryExtensions.cs" />
     <Compile Include="BoolDialog.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="BoolDialog.Designer.cs">
       <DependentUpon>BoolDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\AnimControllerFiles.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AnimControllerFiles.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\CheckList.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Utils\DisableableComboBox.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Utils\ColorDropDown.cs">
       <SubType>Component</SubType>
@@ -108,6 +124,10 @@
     <EmbeddedResource Include="SettingsDialog.resx">
       <DependentUpon>SettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Utils\AnimControllerFiles.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AnimControllerFiles.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -124,6 +144,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\minus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PanLeft.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PanRight.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PauseButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PlayButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ReverseButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\StopButton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ZoomIn.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ZoomOut.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
