More GUI and terrain changes
-Tweaked tree generation
- Added a test panel, and fleshed out the gameControl
- Changed terrain generation, added random seeding
- Slight texture change to leaves, still needs work

--- a/DoodleEmpires/DoodleEmpires.csproj
+++ b/DoodleEmpires/DoodleEmpires.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Engine\Entities\Unit.cs" />
     <Compile Include="Engine\Entities\Vegetation.cs" />
     <Compile Include="Engine\GUI\GameControl.cs" />
+    <Compile Include="Engine\GUI\GUIPanel.cs" />
     <Compile Include="Engine\Net\GameClient.cs" />
     <Compile Include="Engine\Net\NetManager.cs" />
     <Compile Include="Engine\Net\NetMap.cs" />
