Beginning work on AI
- Begin work on AI
- Added a node based pathfinder, still needs to be tested and optimized
- Added some unused states for AI and units
- Made the old terrain system obselete

--- a/DoodleEmpires/DoodleEmpires.csproj
+++ b/DoodleEmpires/DoodleEmpires.csproj
@@ -43,11 +43,20 @@
     <Compile Include="Engine\Economy\TechTree.cs" />
     <Compile Include="Engine\Economy\EconomyBuff.cs" />
     <Compile Include="Engine\Economy\ZoneManager.cs" />
+    <Compile Include="Engine\Entities\AI\AIHandler.cs" />
+    <Compile Include="Engine\Entities\AI\AIState.cs" />
+    <Compile Include="Engine\Entities\AI\BasicAI.cs" />
+    <Compile Include="Engine\Entities\EntityManager.cs" />
     <Compile Include="Engine\Entities\IFocusable.cs" />
     <Compile Include="Engine\Entities\Entity.cs" />
     <Compile Include="Engine\Entities\Pathfinding.cs" />
+    <Compile Include="Engine\Entities\Pathfinding\AStar.cs" />
+    <Compile Include="Engine\Entities\Pathfinding\ImmutableStack.cs" />
+    <Compile Include="Engine\Entities\Pathfinding\NodeMap.cs" />
+    <Compile Include="Engine\Entities\Pathfinding\PriorityQueue.cs" />
     <Compile Include="Engine\Entities\UnitBuff.cs" />
     <Compile Include="Engine\Economy\Zoning.cs" />
+    <Compile Include="Engine\Entities\UnitState.cs" />
     <Compile Include="Engine\GUI\GUIListView.cs" />
     <Compile Include="Engine\GUI\GUIButton.cs" />
     <Compile Include="Engine\GUI\GUIScrollPanel.cs" />
@@ -85,7 +94,7 @@
     <Compile Include="Engine\Terrain\TileType.cs" />
     <Compile Include="Engine\Terrain\Utils.cs" />
     <Compile Include="Engine\Terrain\VolcanicFormation.cs" />
-    <Compile Include="Engine\Terrain\SPMap.cs" />
+    <Compile Include="Engine\Net\SPMap.cs" />
     <Compile Include="Engine\Terrain\VoxelMap.cs" />
     <Compile Include="Engine\Utilities\AdvancedGame.cs" />
     <Compile Include="Engine\Utilities\CustomGame.cs" />
