Update Pathfinding System
- Now uses a pathfinding system found online
- Pathfinding data now saved into level
- Debugging property added to SPMap (F3)

TODO:
Add pathfinder to server map

--- a/DoodleEmpires/DoodleEmpires.csproj
+++ b/DoodleEmpires/DoodleEmpires.csproj
@@ -49,11 +49,22 @@
     <Compile Include="Engine\Entities\EntityManager.cs" />
     <Compile Include="Engine\Entities\IFocusable.cs" />
     <Compile Include="Engine\Entities\Entity.cs" />
+    <Compile Include="Engine\Entities\PathFinder\General\Pair.cs" />
+    <Compile Include="Engine\Entities\PathFinder\General\PriorityQueue.cs" />
+    <Compile Include="Engine\Entities\PathFinder\General\SingletonHolder.cs" />
+    <Compile Include="Engine\Entities\PathFinder\General\Triple.cs" />
+    <Compile Include="Engine\Entities\PathFinder\General\Util.cs" />
+    <Compile Include="Engine\Entities\PathFinder\GridPos.cs" />
+    <Compile Include="Engine\Entities\PathFinder\GridRect.cs" />
+    <Compile Include="Engine\Entities\PathFinder\Grid\BaseGrid.cs" />
+    <Compile Include="Engine\Entities\PathFinder\Grid\DynamicGrid.cs" />
+    <Compile Include="Engine\Entities\PathFinder\Grid\DynamicGridWPool.cs" />
+    <Compile Include="Engine\Entities\PathFinder\Grid\PartialGridWPool.cs" />
+    <Compile Include="Engine\Entities\PathFinder\Grid\StaticGrid.cs" />
+    <Compile Include="Engine\Entities\PathFinder\Heuristic.cs" />
+    <Compile Include="Engine\Entities\PathFinder\JumpPointFinder.cs" />
+    <Compile Include="Engine\Entities\PathFinder\NodePool.cs" />
     <Compile Include="Engine\Entities\Pathfinding.cs" />
-    <Compile Include="Engine\Entities\Pathfinding\AStar.cs" />
-    <Compile Include="Engine\Entities\Pathfinding\ImmutableStack.cs" />
-    <Compile Include="Engine\Entities\Pathfinding\NodeMap.cs" />
-    <Compile Include="Engine\Entities\Pathfinding\PriorityQueue.cs" />
     <Compile Include="Engine\Entities\UnitBuff.cs" />
     <Compile Include="Engine\Economy\Zoning.cs" />
     <Compile Include="Engine\Entities\UnitState.cs" />
