More UI improvements
- Added text fields, yay!!! :)
- Tidied up NetGame a bit
- Added a focused variable to all UI elements
- Fixed GUI Text pane
- Added a text box that can double as a password box
- Added text alignment fields to some UI elements
- Decided that all line splits should be return characters

--- a/DoodleEmpires/DoodleEmpires.csproj
+++ b/DoodleEmpires/DoodleEmpires.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Engine\Entities\UnitBuff.cs" />
     <Compile Include="Engine\Economy\Zoning.cs" />
     <Compile Include="Engine\Entities\UnitState.cs" />
+    <Compile Include="Engine\GUI\GUITextBox.cs" />
     <Compile Include="Engine\GUI\GUIListView.cs" />
     <Compile Include="Engine\GUI\GUIButton.cs" />
     <Compile Include="Engine\GUI\GUIScrollPanel.cs" />
